test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-oknil-owned.good
assign-oknil-unmanaged-from-oknil-owned.chpl:8: error: Cannot assign to unmanaged MyClass? from owned MyClass?
